--- a/tests/index.html
+++ b/tests/index.html
@@ -14,6 +14,11 @@
     <link rel="stylesheet" href="assets/dummy.css">
     <link rel="stylesheet" href="assets/test-support.css">
 
+
+    <link href='https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+
     {{content-for 'head-footer'}}
     {{content-for 'test-head-footer'}}
   </head>
